src/test/deca/syntax/invalid/HW/soloPrint.deca
// Description:
//    Programme minimaliste oubliant le point virgule en fin de ligne
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 07/01/2022
{
        print;
}